<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoDroid</string>
    <string name="need_motivation_button">getMotivation</string>
    <string name="set_topic_button">setTopic</string>
    <string name="doit_button">doIt!</string>
    <string name="title_selection_quiz_topics">Select Quiz Topic(s)</string>

    <string name="test">question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question question Question ?</string>
    <string name="select_topic_first">Select a topic first</string>
    <string name="willing">Willing is not enough</string>

    <string name="action_settings">Settings</string>
    <string name="doc_reference">documentation reference</string>

    <string name="title_settings">Settings</string>
    <string name="turn_sound_on">turn on</string>
    <string name="turn_sound_off">turn off</string>
    <string name="pref_sound">pref_sound</string>

    <string name="report_because">Report because</string>
    <string name="question_incorrect">question incorrect</string>
    <string name="answer_incorrect">answer incorrect</string>
    <string name="documentation_irrelevant">documentation irrelevant</string>
    <string name="your_comment_here">Your comment here</string>
    <string name="report">Report</string>
    <string name="dislike">dislike</string>
    <string name="like">like</string>

    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>

    <string name="already_voted">You have already voted</string>
    <string name="report_was_sent">Report was sent. Thank you.</string>
    <string name="thank_upvote">Thank you for upvote</string>
    <string name="check_docs">Check documentation</string>
    <string name="go">Go</string>

    <plurals name="numberOfQuestionsInTest">
        <item quantity="one">Left %d question</item>
        <item quantity="other">Left %d questions</item>
    </plurals>

    <!--Shia LaBeouf - Just Do it! (Auto-tuned)-->
    <string name="url_motivational_video" translatable="false">http://www.youtube.com/watch?v=gJscrxxl_Bg</string>

    <string name="press_again_to_exit">Press again to exit</string>
    <string name="test_result_correct">Correct: %d</string>
    <string name="test_result_wrong">Wrong: %d</string>
    <string name="test_result_summary100">You are the best!</string>
    <string name="test_result_summary99">Great score!</string>
    <string name="test_result_summary70">Not bad, but you can do better. Keep on practicing and you will succeed.</string>
    <string name="test_result_summary40">Don\'t worry, you can pass this test better. Just read documentation and try again.</string>
    <string name="test_result_title">Summary</string>
    <string name="test_progress_title">%1$s %2$d/%3$d</string>
    <string name="cannot_load_sound">Can\'t load media files, sound is disabled</string>
    <string name="total_summary">Show total summary</string>

    <string name="total_questions">Total questions: %d</string>
    <string name="viewed_questions">Viewed: %d</string>
    <string name="almost_studied_questions">Almost studied: %d</string>
    <string name="studied_questions">Studied: %d</string>
    <string name="totalSummary">Your progress</string>
    <string name="test_completed">Test completed</string>
    <string name="failed_to_load_quiz">Failed to load quiz data</string>
    <string name="error_to_sync_try_again_later">Error to sync, try again later</string>
    <!-- for debug menu -->
    <string name="debug_title_debug_menu">Debug Menu</string>
    <string name="debug_menu">Debug Menu</string>
    <string name="debug_force_crash">debug_force_crash</string>
    <string name="debug_pref_ssl_pinning">debug_pref_ssl_pinning</string>
    <string name="not_yet_for_this_question">Not yet for this question</string>
</resources>
