<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/right_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="20sp"
            tools:text="@string/test_result_correct"
            />

        <TextView
            android:id="@+id/wrong_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/test_result_wrong"
            />

        <RelativeLayout
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="20dp"
            >

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/progressBar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cpb_background_progressbar_width="8dp"
                app:cpb_progressbar_color="@color/colorAccent"
                app:cpb_progressbar_width="10dp"/>


            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/progressBar"
                android:layout_alignTop="@id/progressBar"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="100%"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/textSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textSize="23sp"
            tools:text="@string/test_result_summary40"
            />

    </LinearLayout>

</ScrollView>